# confluence_daily

./: .gitignore  README.md  build_exe.bat  pyproject.toml  requirements.txt  run_daily_uploader.bat
packaging/: ConfluenceDailyUploader.spec
scripts/: build_exe.ps1  generate_icon.py  run_app.ps1
src/confluence_daily/: __init__.py  __main__.py  autostart.py  calendar_utils.py  config.py  confluence_client.py  models.py  page_builder.py  state.py  ui.py  updater.py  uploader.py
tests/: test_calendar_utils.py  test_config.py  test_confluence_client.py  test_page_builder.py  test_state.py  test_ui_helpers.py  test_updater.py  test_uploader.py
