[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confluence-daily-uploader"
version = "0.2.0"
description = "Windows tray app for posting daily capture/video updates to Confluence."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  "requests>=2.32",
  "keyring>=25.2",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.9",
]

[project.scripts]
confluence-daily = "confluence_daily.ui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
confluence_daily = ["assets/*.ico", "assets/*.png"]
